Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
48cb120c5 (dev), 61c15cb94 (6.9), e42afe712 (6.8)
Description
When editing a cell in TableView, it will not commit when focus is lost. It will only commit if the focus transfer happens because of hitting the Tab key.
This is not expected. An edit delegate should always emit the commit signal (and let the edit delegate decide if the changes should be stored in the model), unless the user cancels the edit by hitting escape. This behaviour is verified by testing e.g macOS "Numbers", and Google "Sheets" (both spread sheet applications).